# mini-mumble

./: .gitignore  CMakeLists.txt  README  TODO
include/: client.h  options.h  sample.h  server.h
src/: client.cc  main.cc  options.cc  server.cc
tests/: main_tests.cc
